ログインできた

--- a/src/views/welcome.pug
+++ b/src/views/welcome.pug
@@ -27,7 +27,7 @@ block content
                         dt
                             i.fas.fa-users
                             |  登録者数
-                        dd 0 人
+                        dd !{usersCount} 人
                         dt
                             i.fas.fa-comment
                             |  累計ノート数
