--- a/src/views/_components.pug
+++ b/src/views/_components.pug
@@ -5,9 +5,7 @@ mixin exta()
 mixin serverInfo()
     .xd-card
         .header
-            h1.title
-                i.fas.fa-info-circle
-                |  サービスの情報
+            h1.title サービスの情報
         .body
             dl
                 dt
