--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -1,8 +1,10 @@
 extends _base
 
 block content
-    section
-        h2 バージョン !{version}
-        ul
-            each log in changelog
-                li= log
+    .xd-card
+        h1: a(href="/") みす廃あらーと
+        section
+            h2 バージョン !{version}
+            ul
+                each log in changelog
+                    li= log
