--- a/src/views/welcome.pug
+++ b/src/views/welcome.pug
@@ -1,51 +1,45 @@
 extends _base
 
 block content
-    section
-        case from
-            when 'logout'
-                p: strong ログアウトしました。
-            when 'optout'
-                p: strong 連携を解除しました。
+    case from
+        when 'logout'
+            .xd-card: p: strong ログアウトしました。
+        when 'optout'
+            .xd-card: p: strong 連携を解除しました。
+    .xd-card
+        h1: a(href="/") みす廃あらーと
         h2= welcomeMessage
-        p Misskey は楽しいものです。気がついたら1日中入り浸っていることも多いでしょう。
-            strong みす廃あらーと
-            | をあなたの Misskey アカウントにインストールして、今日のあなたの Misskey 活動を把握しましょう。
-        p 始める前に、
-            a(href="/terms") 利用規約
-            | を読んでください。
-            strong ログインボタンを押した時点で、規約に従ったものとみなします。
-        form(action="/login", method="get")
-            .xd-inputs
-                input.xd-input(type="text" placeholder="ホスト名(例: misskey.io)" name="host" required)
-                input.xd-button.primary(type="submit", value="ログイン")
-        p Misskey 以外のソフトウェアには対応していません。マストドンユーザーは
-            +exta(href="https://donhaialert.herokuapp.com/") ドン廃あらーと
-            | をお使いください。
+    .xd-hstack
+        section.xd-card
+            p Misskey は楽しいものです。気がついたら1日中入り浸っていることも多いでしょう。
+            p さあ、今すぐみす廃アラートをインストールして、今日のあなたの Misskey 活動を把握しよう。
+        section.xd-card
+            p 始める前に、
+                a(href="/terms") 利用規約
+                | を読んでください。
+            form(action="/login", method="get")
+                .xd-inputs
+                    input.xd-input(type="text" placeholder="ホスト名(例: misskey.io)" name="host" required)
+                    input.xd-button.primary(type="submit", value="ログイン")
 
-    section
-        .xd-cards.center
-            +serverInfo()
-            .xd-card
-                .header
-                    h1.title
-                        i.fas.fa-phone-alt
-                        |  開発者
-                .body
-                    p 何か困ったことがあったら、以下のアカウントにメッセージを送ってください。
-                    ul
-                        li: +exta(href="https://misskey.io/@ebi") @ebi@misskey.io
-                        li: +exta(href="https://groundpolis.app/@X") @X@groundpolis.app
-                        li: +exta(href="https://twitter.com/Xeltica") @Xeltica@twitter.com
-                        li: +exta(href="mailto:xeltica@gmail.com") xeltica@gmail.com
-            .xd-card
-                .header
-                    h1.title
-                        i.fas.fa-hashtag
-                        |  タイムライン
-                .body
-                    p 近いうちに、ここで #misshaialert タグのタイムラインを表示します。まだ工事中です
-
+    section.xd-hstack
+        +serverInfo()
+        .xd-card
+            .header
+                h1.title 開発者
+            .body
+                p 何か困ったことがあったら、以下のアカウントにメッセージを送ってください。
+                ul
+                    li: +exta(href="https://misskey.io/@ebi") @ebi@misskey.io
+                    li: +exta(href="https://groundpolis.app/@X") @X@groundpolis.app
+                    li: +exta(href="https://twitter.com/Xeltica") @Xeltica@twitter.com
+                    li: +exta(href="mailto:xeltica@gmail.com") xeltica@gmail.com
+        .xd-card
+            .header
+                h1.title タイムライン
+            .body
+                p 近いうちに、ここで #misshaialert タグのタイムラインを表示します。まだ工事中です
+    <a href="https://github.com/xeltica/misshaialert" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
 block script
     script.
