--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,9 +1,52 @@
 @import '_xeltica-design.scss';
 
 body {
-    background: $bg-pale-1;
+    background: var(--bg-pale-1);
 }
 
 h1> a {
     border-bottom: none;
+}
+
+.background {
+  position: fixed;
+  z-index: -50;
+  inset: 0;
+  
+  background: radial-gradient(
+    farthest-corner at 0 0,
+    #86b300 0%,
+    #86b300 40%,
+    #6900ba 90%,
+    #6900ba 100%
+  );
+}
+
+.background:before {
+  z-index: -200;
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(
+    60vw at 150vh 50vh,
+    #ff9900 0%,
+    #ff9900 20%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  content: "";
+}
+
+.background:after {
+  z-index: -100;
+  position: absolute;
+  inset: 0;
+  background: radial-gradient(
+    50vw at 120vw 120vh,
+    rgba(0, 30, 190, 1) 0%,
+    rgba(0, 30, 190, 0) 100%
+  );
+  content: "";
+}
+
+details > summary {
+    margin-bottom: 8px;
 }
