--- a/src/views/_base.pug
+++ b/src/views/_base.pug
@@ -31,3 +31,5 @@ html
                         a(href="/about") version #{version}
                     block footer
         block script
+        script(defer src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js')
+            
