--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -15,7 +15,7 @@ block content
                 .xd-alert.my-2
                     i.icon.fas.fa-thumbs-up
                     strong テスト送信しました。
-    
+ 
         if isGroundpolis
             .xd-alert.my-2
                 i.icon.fas.fa-meteor
@@ -49,6 +49,19 @@ block content
                                 td !{score.followersDelta}
     
         section.xd-card#settings
+                -
+                    const visibilities = [
+                        [ 'public', 'パブリック'],
+                        [ 'home', isGroundpolis ? '未収載' : 'ホーム'],
+                        [ 'followers', 'フォロワー'],
+                    ];
+                    if (isGroundpolis) visibilities.push(['users', 'ログインユーザー']);
+                    const alertModes = [
+                        [ 'note', '自動的にノートを投稿' ],
+                        [ 'notification', 'Misskeyに通知(標準)' ],
+                        [ 'nothing', '通知しない' ],
+                    ];
+                    const currentAlertModeLabel = alertModes.find(a => a[0] === user.alertMode)[1];
                 .header
                     h1.title 設定
                 .body
@@ -57,21 +70,75 @@ block content
                         | スコア通知方法に「Misskey に通知」を選んでいる場合、Groundpolis v3 および Misskey v12 の最新版以外では動作しません。めいすきーや古いバージョンをお使いの方は、「自動的にノートを投稿」をお使いください。
                     form(method="post", action="/update-settings")
                         p: label スコア通知方法：
-                            select(name="alertMode")
-                                option(value="note", selected=user.alertMode === 'note') 自動的にノートを投稿 (標準)
-                                option(value="notification", selected=user.alertMode === 'notification') Misskey に通知
-                                option(value="nothing", selected=user.alertMode === 'nothing') 通知しない
-                        p: label タイムゾーン：(coming soon)
-                        button.primary(type="submit") 保存
+                            select(name="alertMode", tabindex=1)
+                                each set in alertModes
+                                    option(value=set[0], selected=(user.alertMode === set[0]))= set[1]
+                        p: label 公開範囲：
+                            select(name="visibility", tabindex=2)
+                                each set in visibilities
+                                    option(value=set[0], selected=(user.visibility === set[0]))= set[1]
+                        p 
+                            | フラグ <br />
+                            label
+                                input(type="radio", name="flag", value="none", checked=!user.localOnly && !user.remoteFollowersOnly, tabindex=3)
+                                | なし(標準)<br />
+                            label
+                                input(type="radio", name="flag", value="localOnly", checked=user.localOnly, tabindex=4)
+                                | ローカルのみ<br />
+                            if isGroundpolis
+                                label
+                                    input(type="radio", name="flag", value="remoteFollowersOnly", checked=user.remoteFollowersOnly, tabindex=5)
+                                    | リモートフォロワーとローカル<br />
+                        div
+                            label 投稿テンプレート
+                            div: textarea(name="template", disabled, tabindex=6)
+                            details(tabindex=7)
+                                summary ヘルプ
+                                p
+                                    code {notesCount}
+                                    | などのテキストを挿入することで、投稿時に自動的に値が埋め込まれます。これを変数といいます。変数の表を次に示します。
+                                table
+                                    thead: tr
+                                        th 変数
+                                        th 説明
+                                    tbody
+                                        tr
+                                            td {notesCount}
+                                            td ノート数
+                                        tr
+                                            td {followingCount}
+                                            td フォロー数
+                                        tr
+                                            td {followersCount}
+                                            td フォロワー数
+                                        tr
+                                            td {notesDelta}
+                                            td 昨日とのノート数の差
+                                        tr
+                                            td {followingDelta}
+                                            td 昨日とのフォロー数の差
+                                        tr
+                                            td {followersDelta}
+                                            td 昨日とのフォロワー数の差
+                                        tr
+                                            td {url}
+                                            td みす廃アラートのURL
+                                        tr
+                                            td {ranking}
+                                            td みす廃ランキングの順位
+                                        tr
+                                            td {rating}
+                                            td みす廃レート
+                        button.primary(type="submit", tabindex=8) 保存
 
 
         section.xd-card#settings
                 .header
                     h1.title 操作
                 .body
-                    form.mb-2(action="/send", method="post"): button#send(style="display: inline-block") アラートをテスト送信
-                    form.mb-2(action="/logout", method="post"): button#logout(style="display: inline-block") ログアウト
-                    form.mb-2(action="/optout", method="post"): button.danger#optout(style="display: inline-block") アカウント連携を解除する
+                    form.mb-2(action="/send", method="post", tabindex=9): button#send(style="display: inline-block") アラートをテスト送信
+                    form.mb-2(action="/logout", method="post", tabindex=10): button#logout(style="display: inline-block") ログアウト
+                    form.mb-2(action="/optout", method="post", tabindex=11): button.danger#optout(style="display: inline-block") アカウント連携を解除する
 
 block script
     script.
