--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -70,77 +70,57 @@ block content
                         | スコア通知方法に「Misskey に通知」を選んでいる場合、Groundpolis v3 および Misskey v12 の最新版以外では動作しません。めいすきーや古いバージョンをお使いの方は、「自動的にノートを投稿」をお使いください。
                     form(method="post", action="/update-settings")
                         p: label スコア通知方法：
-                            select#alertModeSelector(name="alertMode", tabindex=1)
+                            select#alertModeSelector(name="alertMode")
                                 each set in alertModes
                                     option(value=set[0], selected=(user.alertMode === set[0]))= set[1]
                         #hideWhenAlertModeNotNote
                             p: label 公開範囲：
-                                select(name="visibility", tabindex=2)
+                                select(name="visibility")
                                     each set in visibilities
                                         option(value=set[0], selected=(user.visibility === set[0]))= set[1]
                             p 
                                 | フラグ <br />
                                 label
-                                    input(type="radio", name="flag", value="none", checked=!user.localOnly && !user.remoteFollowersOnly, tabindex=3)
+                                    input(type="radio", name="flag", value="none", checked=!user.localOnly && !user.remoteFollowersOnly)
                                     | なし(標準)<br />
                                 label
-                                    input(type="radio", name="flag", value="localOnly", checked=user.localOnly, tabindex=4)
+                                    input(type="radio", name="flag", value="localOnly", checked=user.localOnly)
                                     | ローカルのみ<br />
                                 if isGroundpolis
                                     label
-                                        input(type="radio", name="flag", value="remoteFollowersOnly", checked=user.remoteFollowersOnly, tabindex=5)
+                                        input(type="radio", name="flag", value="remoteFollowersOnly", checked=user.remoteFollowersOnly)
                                         | リモートフォロワーとローカル<br />
                         #hideWhenAlertModeNothing
                             div
-                                label 投稿テンプレート
-                                div: textarea(name="template", disabled, tabindex=6)
-                                details(tabindex=7)
+                                label 投稿テンプレート<br/>
+                                textarea(name="template")=user.template || defaultTemplate
+                                details()
                                     summary ヘルプ
-                                    p
-                                        code {notesCount}
-                                        | などのテキストを挿入することで、投稿時に自動的に値が埋め込まれます。これを変数といいます。変数の表を次に示します。
+                                    ul
+                                        li 空欄にすると、デフォルト値にリセットされます。
+                                        li ハッシュタグ #misshaialert は、テンプレートに関わらず自動付与されます。
+                                        li
+                                            code {notesCount}
+                                            | といった形式のテキストは変数として扱われ、これを含めると投稿時に自動的に値が埋め込まれます。
                                     table
                                         thead: tr
                                             th 変数
                                             th 説明
                                         tbody
-                                            tr
-                                                td {notesCount}
-                                                td ノート数
-                                            tr
-                                                td {followingCount}
-                                                td フォロー数
-                                            tr
-                                                td {followersCount}
-                                                td フォロワー数
-                                            tr
-                                                td {notesDelta}
-                                                td 昨日とのノート数の差
-                                            tr
-                                                td {followingDelta}
-                                                td 昨日とのフォロー数の差
-                                            tr
-                                                td {followersDelta}
-                                                td 昨日とのフォロワー数の差
-                                            tr
-                                                td {url}
-                                                td みす廃アラートのURL
-                                            tr
-                                                td {ranking}
-                                                td みす廃ランキングの順位
-                                            tr
-                                                td {rating}
-                                                td みす廃レート
-                        button.primary(type="submit", tabindex=8) 保存
+                                            each val, key in templateVariables
+                                                tr
+                                                    td=key
+                                                    td=val.description
+                        button.primary(type="submit") 保存
 
 
         section.xd-card#settings
                 .header
                     h1.title 操作
                 .body
-                    form.mb-2(action="/send", method="post", tabindex=9): button#send(style="display: inline-block") アラートをテスト送信
-                    form.mb-2(action="/logout", method="post", tabindex=10): button#logout(style="display: inline-block") ログアウト
-                    form.mb-2(action="/optout", method="post", tabindex=11): button.danger#optout(style="display: inline-block") アカウント連携を解除する
+                    form.mb-2(action="/send", method="post"): button#send(style="display: inline-block") アラートをテスト送信
+                    form.mb-2(action="/logout", method="post"): button#logout(style="display: inline-block") ログアウト
+                    form.mb-2(action="/optout", method="post"): button.danger#optout(style="display: inline-block") アカウント連携を解除する
 
 block script
     script.
